[package]
name = "RusticNkisi"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.13", features = ["svg", "canvas","tokio"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["serde", "v4"] }
thiserror = "1"
crossbeam-channel = "0.5"
